Fix protocol api to generate the correct swagger schema.
